# mujoco-bipedal-joystick-walker

./: .gitattributes  .gitignore  BERKELEY_VS_BIOMECH_WALKING_ANALYSIS.md  MJDATA_neutral_poze.TXT  OPTIMIZATION_APPLIED.md  PERFORMANCE_ISSUES.md  README.md  REFERENCES_USED.md  __init__.py  barkley_legacy_walking.py  biomechanics_env.py  biomechanics_model.py  bvh_reference.py  config.py  deep_rl.py  env.py  env_factory.py  evaluate.py  mjmodel.xml  model_factory.py  playground_env.py  pyproject.toml  reference_sanity.py  requirements.txt  smoke_test.py  train.py  training_wrappers.py  view_model_pose.py  walking_analysis.ipynb  walking_analysis.py
BVH_walking_animation/: build_walk_tiers.py  sources.txt  tier1_debug_10.txt  tier1_forward_walk.txt  tier2_walk_variations.txt  tier3_style_or_complex_walks.txt  uneven_terrain_walks.txt  walk_tiers_summary.md  walking_filter_manifest.txt
analysis_outputs/: actuator_metrics.csv  episode_metrics.csv  notebook_in_distribution_leaderboard.csv  notebook_overall_scenario_score.csv  notebook_scenario_top3.csv  notebook_top_power_actuators.csv  policy_metrics.csv  selected_checkpoints.csv  training_history.csv  trial_metrics.csv
docs/: BERKELEY_VS_BIOMECH_WALKING_ANALYSIS.md  ERFI_REFERENCE.md  MODEL_LEARNING_VERSIONS.md  OPTIMIZATION_APPLIED.md  PERFORMANCE_ISSUES.md
generated_models/: human_male_180cm_75kg_base.xml  human_male_180cm_75kg_standard.xml  human_male_180cm_75kg_standard_trainfast_v10.xml  human_male_180cm_75kg_standard_trainfast_v11.xml  human_male_180cm_75kg_standard_trainfast_v12.xml  (+14 more)
(+3112 files in other folders)
