[project]
name = "mujoco-bipedal-joystick-walker"
version = "0.1.0"
description = "Bipedal joystick locomotion training and evaluation with MuJoCo and Brax."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "brax>=0.14",
    "jax>=0.5.0",
    "loguru>=0.7",
    "ipykernel>=6.30",
    "matplotlib>=3.10",
    "ml-collections>=1.1",
    "mujoco>=3.6.0",
    "nbconvert>=7.16",
    "numpy>=2.0",
    "pandas>=2.3",
    "playground>=0.2.0",
]

[tool.uv]
package = false
